# data-structures

./: CMakeLists.txt  README.md
doc/: config
inc/: binary_tree.h  defines.h  linked_list.h
src/: binary_tree.c  linked_list.c  main.c
